--- a/data.html
+++ b/data.html
@@ -5,9 +5,9 @@
     <title>Table data</title>
   </head>
   <body>
-    <table id="dataTable">
 
-    </table>
+    <section id="sectionTable">
+    </section>
 
     <script src="js/app.js"></script>
   </body>
