--- a/data.html
+++ b/data.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/data.css">
     <title>Table data</title>
   </head>
   <body>
