working on connection data correctly

--- a/data.html
+++ b/data.html
@@ -10,6 +10,21 @@
     <section id="sectionTable">
     </section>
 
+    <h2>Customers per Hour</h2>
+
+    <section id="sectionCustomers">
+    </section>
+
+    <h2>Cups per Hour</h2>
+
+    <section id="sectionCups">
+    </section>
+
+    <h2>Pounds per Hour</h2>
+
+    <section id="sectionPounds">
+    </section>
+
     <script src="js/app.js"></script>
   </body>
 </html>
